--- a/estilos/style.css
+++ b/estilos/style.css
@@ -41,3 +41,22 @@ iframe#tela {
     width: 267px;
     height: 471px;
 }
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais > a > img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.534);
+    box-sizing: border-box;
+}
+
+section#redes-sociais > a > img:hover {
+    border: 2px solid rgba(244, 245, 179, 0.473);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    transition: transform .2s;
+}
